fixed some issues with image scaling on mobile

--- a/less/mixins.less
+++ b/less/mixins.less
@@ -15,3 +15,7 @@
     justify-content: @flex-box-justify-content;
     flex-wrap: @flex-box-wrap;
 }
+
+.width-100{
+    width: 100%;
+}
